updated cache handling on model

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,106 +61,106 @@
      "output_type": "stream",
      "text": [
       "Training for 100 epochs...\n",
-      "Epoch 0 accuracy:  79.000%\n",
-      "Epoch 1 accuracy:  85.750%\n",
-      "Epoch 2 accuracy:  87.000%\n",
-      "Epoch 3 accuracy:  87.750%\n",
-      "Epoch 4 accuracy:  88.125%\n",
-      "Epoch 5 accuracy:  88.875%\n",
-      "Epoch 6 accuracy:  88.875%\n",
-      "Epoch 7 accuracy:  88.875%\n",
-      "Epoch 8 accuracy:  88.875%\n",
-      "Epoch 9 accuracy:  88.875%\n",
-      "Epoch 10 accuracy:  88.875%\n",
-      "Epoch 11 accuracy:  88.750%\n",
-      "Epoch 12 accuracy:  88.500%\n",
-      "Epoch 13 accuracy:  88.625%\n",
-      "Epoch 14 accuracy:  88.625%\n",
-      "Epoch 15 accuracy:  88.625%\n",
-      "Epoch 16 accuracy:  88.625%\n",
-      "Epoch 17 accuracy:  88.750%\n",
-      "Epoch 18 accuracy:  88.625%\n",
-      "Epoch 19 accuracy:  88.625%\n",
-      "Epoch 20 accuracy:  88.625%\n",
-      "Epoch 21 accuracy:  88.625%\n",
-      "Epoch 22 accuracy:  88.625%\n",
-      "Epoch 23 accuracy:  88.625%\n",
-      "Epoch 24 accuracy:  88.625%\n",
-      "Epoch 25 accuracy:  88.750%\n",
-      "Epoch 26 accuracy:  88.500%\n",
-      "Epoch 27 accuracy:  88.250%\n",
-      "Epoch 28 accuracy:  88.125%\n",
-      "Epoch 29 accuracy:  88.125%\n",
-      "Epoch 30 accuracy:  88.125%\n",
-      "Epoch 31 accuracy:  88.125%\n",
-      "Epoch 32 accuracy:  88.125%\n",
-      "Epoch 33 accuracy:  88.000%\n",
-      "Epoch 34 accuracy:  87.875%\n",
-      "Epoch 35 accuracy:  87.875%\n",
-      "Epoch 36 accuracy:  88.000%\n",
-      "Epoch 37 accuracy:  88.000%\n",
-      "Epoch 38 accuracy:  88.250%\n",
-      "Epoch 39 accuracy:  88.250%\n",
-      "Epoch 40 accuracy:  88.250%\n",
-      "Epoch 41 accuracy:  88.375%\n",
-      "Epoch 42 accuracy:  88.500%\n",
-      "Epoch 43 accuracy:  88.500%\n",
-      "Epoch 44 accuracy:  88.625%\n",
-      "Epoch 45 accuracy:  88.750%\n",
-      "Epoch 46 accuracy:  88.750%\n",
-      "Epoch 47 accuracy:  88.750%\n",
-      "Epoch 48 accuracy:  88.625%\n",
-      "Epoch 49 accuracy:  88.750%\n",
-      "Epoch 50 accuracy:  88.875%\n",
-      "Epoch 51 accuracy:  88.875%\n",
-      "Epoch 52 accuracy:  89.000%\n",
-      "Epoch 53 accuracy:  89.250%\n",
-      "Epoch 54 accuracy:  89.500%\n",
-      "Epoch 55 accuracy:  89.625%\n",
-      "Epoch 56 accuracy:  89.875%\n",
-      "Epoch 57 accuracy:  90.000%\n",
-      "Epoch 58 accuracy:  90.250%\n",
-      "Epoch 59 accuracy:  90.250%\n",
-      "Epoch 60 accuracy:  90.250%\n",
-      "Epoch 61 accuracy:  90.250%\n",
-      "Epoch 62 accuracy:  90.375%\n",
-      "Epoch 63 accuracy:  90.250%\n",
-      "Epoch 64 accuracy:  90.375%\n",
-      "Epoch 65 accuracy:  90.500%\n",
-      "Epoch 66 accuracy:  90.875%\n",
-      "Epoch 67 accuracy:  90.875%\n",
-      "Epoch 68 accuracy:  91.250%\n",
-      "Epoch 69 accuracy:  91.250%\n",
-      "Epoch 70 accuracy:  91.250%\n",
-      "Epoch 71 accuracy:  91.250%\n",
-      "Epoch 72 accuracy:  91.375%\n",
-      "Epoch 73 accuracy:  91.375%\n",
-      "Epoch 74 accuracy:  91.750%\n",
-      "Epoch 75 accuracy:  91.875%\n",
-      "Epoch 76 accuracy:  92.250%\n",
-      "Epoch 77 accuracy:  92.250%\n",
-      "Epoch 78 accuracy:  92.375%\n",
-      "Epoch 79 accuracy:  92.375%\n",
-      "Epoch 80 accuracy:  92.500%\n",
-      "Epoch 81 accuracy:  92.625%\n",
-      "Epoch 82 accuracy:  92.750%\n",
-      "Epoch 83 accuracy:  92.875%\n",
-      "Epoch 84 accuracy:  93.000%\n",
-      "Epoch 85 accuracy:  93.000%\n",
-      "Epoch 86 accuracy:  93.125%\n",
-      "Epoch 87 accuracy:  93.500%\n",
-      "Epoch 88 accuracy:  93.625%\n",
-      "Epoch 89 accuracy:  93.750%\n",
-      "Epoch 90 accuracy:  93.750%\n",
-      "Epoch 91 accuracy:  93.875%\n",
-      "Epoch 92 accuracy:  93.875%\n",
-      "Epoch 93 accuracy:  93.875%\n",
-      "Epoch 94 accuracy:  93.875%\n",
-      "Epoch 95 accuracy:  93.875%\n",
-      "Epoch 96 accuracy:  93.875%\n",
-      "Epoch 97 accuracy:  94.000%\n",
-      "Epoch 98 accuracy:  94.125%\n",
-      "Epoch 99 accuracy:  94.125%\n"
+      "Epoch 0 accuracy:  77.375%\n",
+      "Epoch 1 accuracy:  84.750%\n",
+      "Epoch 2 accuracy:  84.875%\n",
+      "Epoch 3 accuracy:  85.750%\n",
+      "Epoch 4 accuracy:  86.875%\n",
+      "Epoch 5 accuracy:  87.375%\n",
+      "Epoch 6 accuracy:  87.750%\n",
+      "Epoch 7 accuracy:  87.750%\n",
+      "Epoch 8 accuracy:  88.375%\n",
+      "Epoch 9 accuracy:  88.500%\n",
+      "Epoch 10 accuracy:  88.625%\n",
+      "Epoch 11 accuracy:  89.000%\n",
+      "Epoch 12 accuracy:  89.000%\n",
+      "Epoch 13 accuracy:  89.250%\n",
+      "Epoch 14 accuracy:  89.125%\n",
+      "Epoch 15 accuracy:  89.250%\n",
+      "Epoch 16 accuracy:  89.375%\n",
+      "Epoch 17 accuracy:  89.125%\n",
+      "Epoch 18 accuracy:  89.125%\n",
+      "Epoch 19 accuracy:  89.875%\n",
+      "Epoch 20 accuracy:  89.875%\n",
+      "Epoch 21 accuracy:  89.875%\n",
+      "Epoch 22 accuracy:  89.875%\n",
+      "Epoch 23 accuracy:  89.875%\n",
+      "Epoch 24 accuracy:  90.000%\n",
+      "Epoch 25 accuracy:  89.875%\n",
+      "Epoch 26 accuracy:  89.875%\n",
+      "Epoch 27 accuracy:  90.000%\n",
+      "Epoch 28 accuracy:  90.250%\n",
+      "Epoch 29 accuracy:  90.625%\n",
+      "Epoch 30 accuracy:  90.750%\n",
+      "Epoch 31 accuracy:  90.750%\n",
+      "Epoch 32 accuracy:  91.000%\n",
+      "Epoch 33 accuracy:  91.000%\n",
+      "Epoch 34 accuracy:  91.250%\n",
+      "Epoch 35 accuracy:  91.500%\n",
+      "Epoch 36 accuracy:  91.500%\n",
+      "Epoch 37 accuracy:  91.500%\n",
+      "Epoch 38 accuracy:  91.625%\n",
+      "Epoch 39 accuracy:  92.000%\n",
+      "Epoch 40 accuracy:  92.125%\n",
+      "Epoch 41 accuracy:  92.250%\n",
+      "Epoch 42 accuracy:  92.500%\n",
+      "Epoch 43 accuracy:  92.500%\n",
+      "Epoch 44 accuracy:  92.500%\n",
+      "Epoch 45 accuracy:  92.625%\n",
+      "Epoch 46 accuracy:  92.625%\n",
+      "Epoch 47 accuracy:  92.750%\n",
+      "Epoch 48 accuracy:  92.750%\n",
+      "Epoch 49 accuracy:  92.750%\n",
+      "Epoch 50 accuracy:  93.125%\n",
+      "Epoch 51 accuracy:  93.250%\n",
+      "Epoch 52 accuracy:  93.375%\n",
+      "Epoch 53 accuracy:  93.625%\n",
+      "Epoch 54 accuracy:  93.875%\n",
+      "Epoch 55 accuracy:  94.375%\n",
+      "Epoch 56 accuracy:  94.625%\n",
+      "Epoch 57 accuracy:  94.750%\n",
+      "Epoch 58 accuracy:  95.250%\n",
+      "Epoch 59 accuracy:  95.500%\n",
+      "Epoch 60 accuracy:  95.500%\n",
+      "Epoch 61 accuracy:  95.875%\n",
+      "Epoch 62 accuracy:  96.125%\n",
+      "Epoch 63 accuracy:  96.500%\n",
+      "Epoch 64 accuracy:  96.500%\n",
+      "Epoch 65 accuracy:  96.750%\n",
+      "Epoch 66 accuracy:  97.000%\n",
+      "Epoch 67 accuracy:  97.125%\n",
+      "Epoch 68 accuracy:  97.375%\n",
+      "Epoch 69 accuracy:  97.750%\n",
+      "Epoch 70 accuracy:  97.875%\n",
+      "Epoch 71 accuracy:  98.000%\n",
+      "Epoch 72 accuracy:  98.000%\n",
+      "Epoch 73 accuracy:  98.125%\n",
+      "Epoch 74 accuracy:  98.125%\n",
+      "Epoch 75 accuracy:  98.250%\n",
+      "Epoch 76 accuracy:  98.250%\n",
+      "Epoch 77 accuracy:  98.375%\n",
+      "Epoch 78 accuracy:  98.375%\n",
+      "Epoch 79 accuracy:  98.375%\n",
+      "Epoch 80 accuracy:  98.375%\n",
+      "Epoch 81 accuracy:  98.500%\n",
+      "Epoch 82 accuracy:  98.625%\n",
+      "Epoch 83 accuracy:  98.625%\n",
+      "Epoch 84 accuracy:  98.625%\n",
+      "Epoch 85 accuracy:  98.625%\n",
+      "Epoch 86 accuracy:  98.625%\n",
+      "Epoch 87 accuracy:  98.625%\n",
+      "Epoch 88 accuracy:  98.750%\n",
+      "Epoch 89 accuracy:  98.875%\n",
+      "Epoch 90 accuracy:  98.875%\n",
+      "Epoch 91 accuracy:  99.000%\n",
+      "Epoch 92 accuracy:  99.000%\n",
+      "Epoch 93 accuracy:  99.125%\n",
+      "Epoch 94 accuracy:  99.125%\n",
+      "Epoch 95 accuracy:  99.125%\n",
+      "Epoch 96 accuracy:  99.125%\n",
+      "Epoch 97 accuracy:  99.250%\n",
+      "Epoch 98 accuracy:  99.250%\n",
+      "Epoch 99 accuracy:  99.250%\n"
      ]
     }
    ],
@@ -181,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy:  91.500%\n"
+      "Test accuracy:  99.500%\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,112 +273,112 @@
      "output_type": "stream",
      "text": [
       "Training for 100 epochs...\n",
-      "Epoch 0 accuracy:  48.921%\n",
-      "Epoch 1 accuracy:  69.241%\n",
-      "Epoch 2 accuracy:  73.347%\n",
-      "Epoch 3 accuracy:  76.270%\n",
-      "Epoch 4 accuracy:  80.097%\n",
-      "Epoch 5 accuracy:  81.489%\n",
-      "Epoch 6 accuracy:  81.072%\n",
-      "Epoch 7 accuracy:  81.907%\n",
-      "Epoch 8 accuracy:  82.533%\n",
-      "Epoch 9 accuracy:  83.090%\n",
-      "Epoch 10 accuracy:  83.577%\n",
-      "Epoch 11 accuracy:  84.134%\n",
-      "Epoch 12 accuracy:  84.760%\n",
-      "Epoch 13 accuracy:  86.639%\n",
-      "Epoch 14 accuracy:  84.273%\n",
-      "Epoch 15 accuracy:  85.108%\n",
-      "Epoch 16 accuracy:  86.291%\n",
-      "Epoch 17 accuracy:  86.152%\n",
-      "Epoch 18 accuracy:  86.430%\n",
-      "Epoch 19 accuracy:  86.917%\n",
-      "Epoch 20 accuracy:  86.987%\n",
-      "Epoch 21 accuracy:  87.404%\n",
-      "Epoch 22 accuracy:  86.430%\n",
-      "Epoch 23 accuracy:  88.031%\n",
-      "Epoch 24 accuracy:  87.404%\n",
-      "Epoch 25 accuracy:  88.866%\n",
-      "Epoch 26 accuracy:  87.752%\n",
-      "Epoch 27 accuracy:  86.778%\n",
-      "Epoch 28 accuracy:  87.404%\n",
-      "Epoch 29 accuracy:  89.144%\n",
-      "Epoch 30 accuracy:  87.961%\n",
-      "Epoch 31 accuracy:  88.587%\n",
-      "Epoch 32 accuracy:  87.613%\n",
-      "Epoch 33 accuracy:  88.379%\n",
-      "Epoch 34 accuracy:  89.074%\n",
-      "Epoch 35 accuracy:  88.518%\n",
-      "Epoch 36 accuracy:  88.796%\n",
-      "Epoch 37 accuracy:  90.188%\n",
-      "Epoch 38 accuracy:  88.796%\n",
-      "Epoch 39 accuracy:  89.562%\n",
-      "Epoch 40 accuracy:  88.657%\n",
-      "Epoch 41 accuracy:  88.796%\n",
-      "Epoch 42 accuracy:  88.796%\n",
-      "Epoch 43 accuracy:  89.979%\n",
-      "Epoch 44 accuracy:  89.979%\n",
-      "Epoch 45 accuracy:  88.727%\n",
-      "Epoch 46 accuracy:  89.701%\n",
-      "Epoch 47 accuracy:  89.214%\n",
-      "Epoch 48 accuracy:  89.005%\n",
-      "Epoch 49 accuracy:  90.675%\n",
-      "Epoch 50 accuracy:  89.492%\n",
-      "Epoch 51 accuracy:  89.701%\n",
-      "Epoch 52 accuracy:  91.371%\n",
-      "Epoch 53 accuracy:  90.536%\n",
-      "Epoch 54 accuracy:  90.466%\n",
-      "Epoch 55 accuracy:  90.953%\n",
-      "Epoch 56 accuracy:  91.162%\n",
-      "Epoch 57 accuracy:  90.118%\n",
-      "Epoch 58 accuracy:  90.118%\n",
-      "Epoch 59 accuracy:  90.675%\n",
-      "Epoch 60 accuracy:  91.441%\n",
-      "Epoch 61 accuracy:  90.605%\n",
-      "Epoch 62 accuracy:  90.536%\n",
-      "Epoch 63 accuracy:  89.701%\n",
-      "Epoch 64 accuracy:  90.257%\n",
-      "Epoch 65 accuracy:  91.719%\n",
-      "Epoch 66 accuracy:  89.840%\n",
-      "Epoch 67 accuracy:  91.580%\n",
-      "Epoch 68 accuracy:  90.397%\n",
-      "Epoch 69 accuracy:  91.093%\n",
-      "Epoch 70 accuracy:  90.953%\n",
-      "Epoch 71 accuracy:  91.232%\n",
-      "Epoch 72 accuracy:  90.466%\n",
-      "Epoch 73 accuracy:  92.136%\n",
-      "Epoch 74 accuracy:  90.884%\n",
-      "Epoch 75 accuracy:  91.093%\n",
-      "Epoch 76 accuracy:  92.067%\n",
-      "Epoch 77 accuracy:  92.206%\n",
-      "Epoch 78 accuracy:  92.902%\n",
-      "Epoch 79 accuracy:  92.067%\n",
-      "Epoch 80 accuracy:  91.510%\n",
-      "Epoch 81 accuracy:  92.206%\n",
-      "Epoch 82 accuracy:  90.257%\n",
-      "Epoch 83 accuracy:  92.345%\n",
-      "Epoch 84 accuracy:  90.605%\n",
-      "Epoch 85 accuracy:  91.788%\n",
-      "Epoch 86 accuracy:  92.136%\n",
-      "Epoch 87 accuracy:  92.136%\n",
-      "Epoch 88 accuracy:  91.997%\n",
-      "Epoch 89 accuracy:  90.953%\n",
-      "Epoch 90 accuracy:  91.997%\n",
-      "Epoch 91 accuracy:  92.136%\n",
-      "Epoch 92 accuracy:  90.953%\n",
-      "Epoch 93 accuracy:  92.206%\n",
-      "Epoch 94 accuracy:  91.371%\n",
-      "Epoch 95 accuracy:  91.719%\n",
-      "Epoch 96 accuracy:  92.276%\n",
-      "Epoch 97 accuracy:  91.719%\n",
-      "Epoch 98 accuracy:  91.858%\n",
-      "Epoch 99 accuracy:  91.580%\n"
+      "Epoch 0 accuracy:  5.289%\n",
+      "Epoch 1 accuracy:  11.204%\n",
+      "Epoch 2 accuracy:  15.658%\n",
+      "Epoch 3 accuracy:  22.129%\n",
+      "Epoch 4 accuracy:  29.854%\n",
+      "Epoch 5 accuracy:  38.135%\n",
+      "Epoch 6 accuracy:  44.328%\n",
+      "Epoch 7 accuracy:  48.295%\n",
+      "Epoch 8 accuracy:  51.983%\n",
+      "Epoch 9 accuracy:  54.697%\n",
+      "Epoch 10 accuracy:  58.177%\n",
+      "Epoch 11 accuracy:  59.986%\n",
+      "Epoch 12 accuracy:  61.935%\n",
+      "Epoch 13 accuracy:  63.257%\n",
+      "Epoch 14 accuracy:  64.579%\n",
+      "Epoch 15 accuracy:  65.275%\n",
+      "Epoch 16 accuracy:  66.319%\n",
+      "Epoch 17 accuracy:  69.450%\n",
+      "Epoch 18 accuracy:  73.765%\n",
+      "Epoch 19 accuracy:  77.801%\n",
+      "Epoch 20 accuracy:  80.237%\n",
+      "Epoch 21 accuracy:  81.768%\n",
+      "Epoch 22 accuracy:  82.742%\n",
+      "Epoch 23 accuracy:  83.925%\n",
+      "Epoch 24 accuracy:  85.317%\n",
+      "Epoch 25 accuracy:  86.639%\n",
+      "Epoch 26 accuracy:  87.683%\n",
+      "Epoch 27 accuracy:  88.657%\n",
+      "Epoch 28 accuracy:  88.935%\n",
+      "Epoch 29 accuracy:  89.422%\n",
+      "Epoch 30 accuracy:  89.979%\n",
+      "Epoch 31 accuracy:  90.049%\n",
+      "Epoch 32 accuracy:  90.257%\n",
+      "Epoch 33 accuracy:  90.605%\n",
+      "Epoch 34 accuracy:  90.953%\n",
+      "Epoch 35 accuracy:  91.162%\n",
+      "Epoch 36 accuracy:  91.232%\n",
+      "Epoch 37 accuracy:  91.510%\n",
+      "Epoch 38 accuracy:  91.719%\n",
+      "Epoch 39 accuracy:  91.928%\n",
+      "Epoch 40 accuracy:  92.136%\n",
+      "Epoch 41 accuracy:  92.415%\n",
+      "Epoch 42 accuracy:  92.624%\n",
+      "Epoch 43 accuracy:  92.902%\n",
+      "Epoch 44 accuracy:  93.250%\n",
+      "Epoch 45 accuracy:  93.389%\n",
+      "Epoch 46 accuracy:  93.598%\n",
+      "Epoch 47 accuracy:  93.737%\n",
+      "Epoch 48 accuracy:  93.807%\n",
+      "Epoch 49 accuracy:  94.224%\n",
+      "Epoch 50 accuracy:  94.502%\n",
+      "Epoch 51 accuracy:  94.572%\n",
+      "Epoch 52 accuracy:  94.572%\n",
+      "Epoch 53 accuracy:  94.711%\n",
+      "Epoch 54 accuracy:  94.711%\n",
+      "Epoch 55 accuracy:  94.711%\n",
+      "Epoch 56 accuracy:  94.920%\n",
+      "Epoch 57 accuracy:  94.990%\n",
+      "Epoch 58 accuracy:  95.059%\n",
+      "Epoch 59 accuracy:  95.129%\n",
+      "Epoch 60 accuracy:  95.268%\n",
+      "Epoch 61 accuracy:  95.407%\n",
+      "Epoch 62 accuracy:  95.477%\n",
+      "Epoch 63 accuracy:  95.685%\n",
+      "Epoch 64 accuracy:  95.755%\n",
+      "Epoch 65 accuracy:  95.964%\n",
+      "Epoch 66 accuracy:  96.103%\n",
+      "Epoch 67 accuracy:  96.103%\n",
+      "Epoch 68 accuracy:  96.103%\n",
+      "Epoch 69 accuracy:  96.173%\n",
+      "Epoch 70 accuracy:  96.173%\n",
+      "Epoch 71 accuracy:  96.173%\n",
+      "Epoch 72 accuracy:  96.242%\n",
+      "Epoch 73 accuracy:  96.173%\n",
+      "Epoch 74 accuracy:  96.312%\n",
+      "Epoch 75 accuracy:  96.312%\n",
+      "Epoch 76 accuracy:  96.312%\n",
+      "Epoch 77 accuracy:  96.451%\n",
+      "Epoch 78 accuracy:  96.521%\n",
+      "Epoch 79 accuracy:  96.521%\n",
+      "Epoch 80 accuracy:  96.590%\n",
+      "Epoch 81 accuracy:  96.729%\n",
+      "Epoch 82 accuracy:  96.729%\n",
+      "Epoch 83 accuracy:  96.660%\n",
+      "Epoch 84 accuracy:  96.660%\n",
+      "Epoch 85 accuracy:  96.729%\n",
+      "Epoch 86 accuracy:  96.799%\n",
+      "Epoch 87 accuracy:  96.868%\n",
+      "Epoch 88 accuracy:  96.938%\n",
+      "Epoch 89 accuracy:  96.938%\n",
+      "Epoch 90 accuracy:  96.938%\n",
+      "Epoch 91 accuracy:  96.938%\n",
+      "Epoch 92 accuracy:  96.938%\n",
+      "Epoch 93 accuracy:  96.938%\n",
+      "Epoch 94 accuracy:  96.938%\n",
+      "Epoch 95 accuracy:  97.008%\n",
+      "Epoch 96 accuracy:  97.008%\n",
+      "Epoch 97 accuracy:  97.008%\n",
+      "Epoch 98 accuracy:  97.077%\n",
+      "Epoch 99 accuracy:  97.077%\n"
      ]
     }
    ],
    "source": [
-    "nn = NN(layers=[64,128,64,10], function='relu')\n",
-    "nn.train(Xtrain,Ytrain, epochs=100, lr=0.01)"
+    "nn = NN(layers=[64,128,64,32,10], function='relu')\n",
+    "nn.train(Xtrain,Ytrain, epochs=100, lr=0.0001)"
    ]
   },
   {
@@ -391,14 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy:  88.056%\n"
+      "Test accuracy:  94.722%\n"
      ]
     }
    ],
@@ -409,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Trabajo",
+   "display_name": "prueba",
    "language": "python",
    "name": "python3"
   },
@@ -423,14 +423,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.0"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "f47fc5675075274d57a4032ad4de193cdb0fb56acbb272e441e696c6ad6667ea"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
